fix(seo, ui): refine meta tags on all pages; improve mobile menu

--- a/about/index.html
+++ b/about/index.html
@@ -10,9 +10,40 @@
     />
     <meta
       name="description"
-      content="I'm Bando Mega Kusuma, a Software Engineer, Frontend Developer, and IoT enthusiast. Explore my portfolio, projects, blog, and ways to connect with me."
+      content="I'm Bando Mega Kusuma, a Software Engineer and Frontend Developer. Explore my portfolio, projects, blog, and ways to connect with me."
     />
+    <meta
+      name="description"
+      content="Learn more about Bando Mega Kusuma, a Software Engineer and Frontend Developer. Explore my portfolio, projects, blog, and ways to connect with me."
+    />
+    <meta name="application-name" content="Bando Mega Kusuma" />
     <meta name="author" content="Bando Mega Kusuma" />
+
+    <meta property="og:title" content="About | Bando Mega Kusuma" />
+    <meta
+      property="og:description"
+      content="Discover my journey as a Software Engineer & IoT Enthusiast."
+    />
+    <meta
+      property="og:image"
+      content="https://bandomega.com/images/preview/about.png"
+    />
+    <meta property="og:url" content="https://bandomega.com/about" />
+    <meta property="og:site_name" content="Bando Mega Kusuma" />
+    <meta property="og:type" content="profile" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://bandomega.com/about" />
+    <meta property="twitter:title" content="About | Bando Mega Kusuma" />
+    <meta
+      property="twitter:description"
+      content="Learn more about me as a Software Engineer & Frontend Developer."
+    />
+    <meta
+      property="twitter:image"
+      content="https://bandomega.com/images/preview/about.png"
+    />
 
     <link rel="icon" href="/images/icons/logo.svg" type="image/x-icon" />
     <link rel="stylesheet" href="/src/output.css" />
@@ -33,15 +64,13 @@
 
         <nav
           id="nav-menu"
-          class="bg-bg-light text-text mt-10 max-w-fit rounded-xl absolute py-10 px-10 md:px-10 md:py-3 hidden md:block top-full md:top-full right-20 md:right-auto md:left-1/2 md:-translate-x-1/2"
+          class="bg-bg-light text-text mt-10 max-w-fit rounded-xl absolute py-12 px-12 md:px-10 md:py-3 hidden md:block top-full md:top-full right-20 md:right-auto md:left-1/2 md:-translate-x-1/2"
         >
-          <ul
-            class="subtitle-600-16 flex flex-col md:flex-row gap-1.5 md:gap-8"
-          >
+          <ul class="subtitle-600-16 flex flex-col md:flex-row gap-4 md:gap-8">
             <li><a href="/">Home</a></li>
-            <li><a href="/about" class="text-secondary">About</a></li>
-            <li><a href="/blog">Blog</a></li>
             <li><a href="/projects">Projects</a></li>
+            <li><a href="/blog">Blog</a></li>
+            <li><a href="/about" class="text-secondary">About</a></li>
             <li><a href="/contact">Contact</a></li>
           </ul>
         </nav>
