--- a/contact/index.html
+++ b/contact/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact & Contact | Bando Mega Kusuma</title>
+    <title>Contact & Find Me | Bando Mega Kusuma</title>
     <link href="/src/output.css" rel="stylesheet" />
     <meta
       name="title"
@@ -11,9 +11,32 @@
     />
     <meta
       name="description"
-      content="I'm Bando Mega Kusuma, a Software Engineer, Frontend Developer, and IoT enthusiast. Explore my portfolio, projects, blog, and ways to connect with me."
+      content="Get in touch with Bando Mega Kusuma for collaboration, freelance projects, or tech discussions."
     />
     <meta name="author" content="Bando Mega Kusuma" />
+
+    <meta property="og:title" content="Contact | Bando Mega Kusuma" />
+    <meta
+      property="og:description"
+      content="Reach out for collaborations or freelance work."
+    />
+    <meta
+      property="og:image"
+      content="https://bandomega.com/images/preview/contact.png"
+    />
+    <meta property="og:url" content="https://bandomega.com/contact" />
+    <meta property="og:type" content="website" />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="Contact | Bando Mega Kusuma" />
+    <meta
+      property="twitter:description"
+      content="Let's connect for projects or collaboration."
+    />
+    <meta
+      property="twitter:image"
+      content="https://bandomega.com/images/preview/contact.png"
+    />
 
     <link rel="icon" href="/images/icons/logo.svg" type="image/x-icon" />
   </head>
@@ -33,15 +56,13 @@
 
         <nav
           id="nav-menu"
-          class="bg-bg-light text-text mt-10 max-w-fit rounded-xl absolute py-10 px-10 md:px-10 md:py-3 hidden md:block top-full md:top-full right-20 md:right-auto md:left-1/2 md:-translate-x-1/2"
+          class="bg-bg-light text-text mt-10 max-w-fit rounded-xl absolute py-12 px-12 md:px-10 md:py-3 hidden md:block top-full md:top-full right-20 md:right-auto md:left-1/2 md:-translate-x-1/2"
         >
-          <ul
-            class="subtitle-600-16 flex flex-col md:flex-row gap-1.5 md:gap-8"
-          >
+          <ul class="subtitle-600-16 flex flex-col md:flex-row gap-4 md:gap-8">
             <li><a href="/">Home</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/blog">Blog</a></li>
             <li><a href="/projects">Projects</a></li>
+            <li><a href="/blog">Blog</a></li>
+            <li><a href="/about">About</a></li>
             <li><a href="/contact" class="text-secondary">Contact</a></li>
           </ul>
         </nav>
@@ -51,7 +72,7 @@
       <section class="mt-20 md:mx-25 mx-5">
         <div class="title text-center">
           <h1
-            class="heading-600-32 md:title-600-48 bg-gradient-to-r from-primary from-30% to-accent text-transparent bg-clip-text inline-block"
+            class="title-600-48 bg-gradient-to-r from-primary from-30% to-accent text-transparent bg-clip-text inline-block"
           >
             Contact
           </h1>
