--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
     />
     <meta
       name="description"
-      content="I'm Bando Mega Kusuma, a Software Engineer, Frontend Developer, and IoT enthusiast. Explore my portfolio, projects, blog, and ways to connect with me."
+      content="I'm Bando Mega Kusuma, a Software Engineer and Frontend Developer. Explore my portfolio, projects, blog, and ways to connect with me."
     />
+    <meta name="application-name" content="Bando Mega Kusuma" />
     <meta name="author" content="Bando Mega Kusuma" />
 
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://bandomega.com/" />
     <meta
       property="og:title"
       content="Bando Mega Kusuma | Software Engineer & Frontend Developer"
@@ -27,10 +26,12 @@
     />
     <meta
       property="og:image"
-      content="https://bandomega.com/images/icons/logo.svg"
+      content="https://bandomega.com/images/preview/home.png"
     />
+    <meta property="og:url" content="https://bandomega.com/" />
+    <meta property="og:site_name" content="Bando Mega Kusuma" />
+    <meta property="og:type" content="website" />
 
-    <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://bandomega.com/" />
     <meta
@@ -43,7 +44,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://bandomega.com/images/icons/logo.svg"
+      content="https://bandomega.com/images/preview/home.png"
     />
 
     <link rel="icon" href="/images/icons/logo.svg" type="image/x-icon" />
@@ -66,15 +67,13 @@
 
         <nav
           id="nav-menu"
-          class="bg-bg-light text-text mt-10 max-w-fit rounded-xl absolute py-10 px-10 md:px-10 md:py-3 hidden md:block top-full md:top-full right-20 md:right-auto md:left-1/2 md:-translate-x-1/2"
+          class="bg-bg-light text-text mt-10 max-w-fit rounded-xl absolute py-12 px-12 md:px-10 md:py-3 hidden md:block top-full md:top-full right-20 md:right-auto md:left-1/2 md:-translate-x-1/2"
         >
-          <ul
-            class="subtitle-600-16 flex flex-col md:flex-row gap-1.5 md:gap-8"
-          >
+          <ul class="subtitle-600-16 flex flex-col md:flex-row gap-4 md:gap-8">
             <li><a href="/" class="text-secondary">Home</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/blog">Blog</a></li>
             <li><a href="/projects">Projects</a></li>
+            <li><a href="/blog">Blog</a></li>
+            <li><a href="/about">About</a></li>
             <li><a href="/contact">Contact</a></li>
           </ul>
         </nav>
