--- a/projects/index.html
+++ b/projects/index.html
@@ -11,9 +11,29 @@
     />
     <meta
       name="description"
-      content="I'm Bando Mega Kusuma, a Software Engineer, Frontend Developer, and IoT enthusiast. Explore my portfolio, projects, blog, and ways to connect with me."
+      content="Explore projects by Bando Mega Kusuma including modern web apps."
     />
     <meta name="author" content="Bando Mega Kusuma" />
+
+    <meta property="og:title" content="Projects | Bando Mega Kusuma" />
+    <meta property="og:description" content="Showcasing web development." />
+    <meta
+      property="og:image"
+      content="https://bandomega.com/images/preview/projects.png"
+    />
+    <meta property="og:url" content="https://bandomega.com/projects" />
+    <meta property="og:type" content="website" />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="Projects | Bando Mega Kusuma" />
+    <meta
+      property="twitter:description"
+      content="Explore my portfolio of Web development."
+    />
+    <meta
+      property="twitter:image"
+      content="https://bandomega.com/images/preview/projects.png"
+    />
 
     <link rel="icon" href="/images/icons/logo.svg" type="image/x-icon" />
   </head>
@@ -33,15 +53,13 @@
 
         <nav
           id="nav-menu"
-          class="bg-bg-light text-text mt-10 max-w-fit rounded-xl absolute py-10 px-10 md:px-10 md:py-3 hidden md:block top-full md:top-full right-20 md:right-auto md:left-1/2 md:-translate-x-1/2"
+          class="bg-bg-light text-text mt-10 max-w-fit rounded-xl absolute py-12 px-12 md:px-10 md:py-3 hidden md:block top-full md:top-full right-20 md:right-auto md:left-1/2 md:-translate-x-1/2"
         >
-          <ul
-            class="subtitle-600-16 flex flex-col md:flex-row gap-1.5 md:gap-8"
-          >
+          <ul class="subtitle-600-16 flex flex-col md:flex-row gap-4 md:gap-8">
             <li><a href="/">Home</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/blog">Blog</a></li>
             <li><a href="/projects" class="text-secondary">Projects</a></li>
+            <li><a href="/blog">Blog</a></li>
+            <li><a href="/about">About</a></li>
             <li><a href="/contact">Contact</a></li>
           </ul>
         </nav>
