fix: update astro.config.mjs base on /blog

--- a/index.html
+++ b/index.html
@@ -799,6 +799,9 @@
               <li><a href="/blog" class="hover:underline">Blog</a></li>
               <li><a href="/projects" class="hover:underline">Project</a></li>
               <li><a href="/contact" class="hover:underline">Contact</a></li>
+              <li>
+                <a href="/astro-blog/" class="hover:underline">Astro Blog</a>
+              </li>
             </ul>
           </div>
           <div>
